samples/_failures_safe/1761618049_334866_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c29d3596.c: In function ‘main’:
./samples/SAFE/__tmp_c29d3596.c:167:40: error: expected ‘)’ at end of input
  167 |     size_t token_count = tokenize(input
      |                                  ~     ^
      |                                        )
./samples/SAFE/__tmp_c29d3596.c:167:26: error: too few arguments to function ‘tokenize’
  167 |     size_t token_count = tokenize(input
      |                          ^~~~~~~~
./samples/SAFE/__tmp_c29d3596.c:102:5: note: declared here
  102 | int tokenize(const char* input, Token* tokens, size_t max_tokens) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_c29d3596.c:167:5: error: expected declaration or statement at end of input
  167 |     size_t token_count = tokenize(input
      |     ^~~~~~
